# halos

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: adr.yml  bug.yml  config.yml  epic.yml  feature.yml  labels.yml  release.yml  spike.yml  stress.yml  verification.yml
src/: main.rs  serial.rs  vga_buffer.rs
