[package]
name = "halos"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "halos"
test = true
bench = false

# sets the panic strategy to abort, instead of unwinding the stack.
#[profile.dev]
#panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
# The cargo subcommand that will be used for building the kernel.
#
# For building using the `cargo-xbuild` crate, set this to `xbuild`.
build-command = ["build"]
# The command invoked with the created bootimage (the "{}" will be replaced
# with the path to the bootable disk image)
# Applies to `bootimage run` and `bootimage runner`
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]

# Additional arguments passed to the run command for non-test executables
# Applies to `bootimage run` and `bootimage runner`
run-args = []

# Additional arguments passed to the run command for test executables
# Applies to `bootimage runner`
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]

# An exit code that should be considered as success for test executables
#test-success-exit-code = {integer}
test-success-exit-code = 33 # (0x10 << 1) | 1

# The timeout for running a test through `bootimage test` or `bootimage runner` (in seconds)
test-timeout = 300

# Whether the `-no-reboot` flag should be passed to test executables
test-no-reboot = true

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = { version = "0.5.2" }
x86_64 = "0.15.4"
uart_16550 = "0.6.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]